# RL_Collision_Avoidance

./: README.md  ubuntu22_personal  ubuntu22_personal.pub
Collision_Avoidance_WS/install/: local_setup.sh  setup.sh
Collision_Avoidance_WS/install/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
Collision_Avoidance_WS/install/log/: latest_build
Collision_Avoidance_WS/install/my_env/share/my_env/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Collision_Avoidance_WS/install/openai_ros/share/openai_ros/: package.bash  package.zsh
Collision_Avoidance_WS/log/: latest_build
Collision_Avoidance_WS/src/RL_env/Alternate_Env/src/: Env.py
Collision_Avoidance_WS/src/RL_env/Gymnasium_Env/: revised.py  test.py  train.py  turtlebot_env.py
Collision_Avoidance_WS/src/RL_env/Gymnasium_Env/logs/: monitor.csv
Collision_Avoidance_WS/src/my_env/: CMakeLists.txt
Collision_Avoidance_WS/src/my_env/launch/: robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  training_env.launch.py
Collision_Avoidance_WS/src/my_env/models/turtlebot3_burger/: model-1_4.sdf  model.sdf
Collision_Avoidance_WS/src/my_env/worlds/: bot_with_people.world  maze.world  saver.txt
Main/install/: setup.ps1  setup.sh
Main/log/: latest_build
Main/src/Scripts/: density_map.py
Main_Testing_WS/install/: local_setup.sh  setup.sh
Main_Testing_WS/log/: latest_build
test/: double_inverted_pendulum.py  humanoid_stand.py  sim.py  stb_test.py
(+64 files in other folders)
